# gemma-4-disaster-management-android-node

./: .gitignore  gradle.properties  local.properties  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: llama_jni.cpp
app/src/main/java/com/akbay/node/: GemmaEngine.kt  GemmaService.kt  LlamaEngine.kt  MainActivity.kt  ModelDownloadService.kt  NodeFragment.kt  NodeStats.kt  OllamaServer.kt  PulsoAdapter.kt  PulsoFragment.kt  TicketsFragment.kt
app/src/main/java/com/bayanihan/node/: GemmaEngine.kt  GemmaService.kt  LlamaEngine.kt  LlamaService.kt  MainActivity.kt  ModelDownloadService.kt  NodeFragment.kt  NodeStats.kt  OllamaServer.kt  PulsoAdapter.kt  PulsoFragment.kt
app/src/main/res/color/: nav_item_tint.xml
app/src/main/res/drawable/: ic_checked_item.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_lucide_activity.xml  ic_lucide_check_circle_2.xml  ic_lucide_clock.xml  ic_lucide_map_pin.xml  ic_lucide_send.xml  ic_lucide_smartphone.xml  ic_lucide_users.xml  ic_lucide_x.xml  ic_nav_node.xml  ic_nav_pulso.xml  ic_nav_tickets.xml  item_row_bg.xml  pill_background.xml  tab_active_bg.xml  tab_container_bg.xml
app/src/main/res/layout/: activity_main.xml  dialog_login.xml  dialog_signup.xml  fragment_node.xml  fragment_pulso.xml  fragment_tickets.xml  item_extracted_row.xml  item_pulso_card.xml  item_pulso_inner_row.xml  item_ticket_card.xml
app/src/main/res/menu/: nav_bottom.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
(+1 files in other folders)
